# clang-plugin

./: CMakeLists.txt  Kconfig.cpp  readme.md  run.sh
sample/: kconfig.h  kconfigtest.c
